# squarebob-rs

./: .continues-handoff.md  .env.example  .gitignore  AGENTS.md  AUTOPILOT_PHASE4.md  AUTOPILOT_PHASE5.md  BUG_HUNT_REPORT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DIAGRAMS.md  HANDOFF.md  PLAN.md  README.md  TODO.md  TODO2.md  TODO4.md  TODO5.md  a.ps1  bootstrap.py  cldd.cmd  plan1.md  task.md  vcpkg-configuration.json  vcpkg.json
.bughunt/: RULES.md  plan1.md  plan2.md
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/sessions/: 11a692f6-03bd-47a8-a421-4b31ad5c92c8.json  692ed5b7-f909-4aa7-b464-b306a1444388.json  6dfcb5b2-661c-48a6-9003-c5479a636835.json  a53dcf34-081d-4cd2-b921-7d194bd65204.json  bc5cd51f-8400-4190-a4a2-46eca99746f6.json  c5fe2aba-f0c6-4eeb-90a9-3bc3afb3bce3.json
.omc/state/: agent-replay-20646fb0-067f-4fc6-af30-186795b00f4f.jsonl  agent-replay-692ed5b7-f909-4aa7-b464-b306a1444388.jsonl  agent-replay-a53dcf34-081d-4cd2-b921-7d194bd65204.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/: 01-lod.md
crates/bvh-gpu/: Cargo.toml  README.md
crates/dirstat-core/: Cargo.toml  README.md
crates/gpu-mem/: Cargo.toml
crates/imageseq-rs/: Cargo.toml
crates/media-encoder/: Cargo.toml
crates/media-encoder/src/: frame.rs  lib.rs  progress.rs  source.rs
crates/media-encoder/src/dialogs/encode/: encode.rs  encode_ui.rs  mod.rs
crates/media-encoder/src/io/: exr_layered.rs  mod.rs
crates/playa-ae/: Cargo.toml
crates/playa-ae/src/: attr_editor.rs  attrs.rs  lib.rs
crates/playa-ffmpeg/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/playa-ffmpeg/docs/: DEVELOP.md  GUIDE.md  PLAN1.md  REPORT.md  VCPKG.md
crates/playa-ffmpeg/examples/: README.md  chapters.rs  codec-info.rs  dump-frames.rs  metadata.rs  remux.rs  transcode-audio.rs  transcode-x264.rs  video-info.rs
crates/playa-ffmpeg/src/: lib.rs
crates/playa-ffmpeg/src/codec/: audio.rs  audio_service.rs  codec.rs  context.rs  discard.rs  field_order.rs  id.rs  mod.rs  parameters.rs  picture.rs  profile.rs  threading.rs  traits.rs  video.rs
crates/playa-ffmpeg/src/codec/decoder/: audio.rs  check.rs  decoder.rs  mod.rs  opened.rs  subtitle.rs  video.rs
crates/playa-ffmpeg/src/codec/encoder/: audio.rs  encoder.rs  mod.rs  subtitle.rs  video.rs
crates/playa-ffmpeg/src/codec/packet/: borrow.rs  packet.rs  side_data.rs
crates/playa-ffmpeg/src/codec/subtitle/: mod.rs  rect.rs  rect_mut.rs
crates/playa-ffmpeg/src/device/: extensions.rs  input.rs  mod.rs  output.rs
crates/playa-ffmpeg/src/filter/: filter.rs  graph.rs  mod.rs  pad.rs
crates/playa-ffmpeg/src/filter/context/: context.rs  sink.rs  source.rs
crates/playa-ffmpeg/src/format/: mod.rs
crates/playa-ffmpeg/src/format/chapter/: chapter.rs  chapter_mut.rs
crates/playa-ffmpeg/src/format/context/: common.rs  input.rs  output.rs
crates/playa-ffmpeg/src/format/format/: input.rs  iter.rs  output.rs
crates/playa-ffmpeg/src/format/stream/: stream.rs  stream_mut.rs
crates/playa-ffmpeg/src/software/: mod.rs
crates/playa-ffmpeg/src/software/resampling/: context.rs  dither.rs  engine.rs  extensions.rs  filter.rs
crates/playa-ffmpeg/src/software/scaling/: context.rs  extensions.rs  filter.rs  vector.rs
crates/playa-ffmpeg/src/util/: channel_layout.rs  error.rs  interrupt.rs  legacy_channel_layout.rs  media.rs  mod.rs  picture.rs  rational.rs  time.rs
crates/playa-ffmpeg/src/util/chroma/: location.rs
crates/playa-ffmpeg/src/util/color/: primaries.rs  range.rs  space.rs  transfer_characteristic.rs
crates/playa-ffmpeg/src/util/dictionary/: immutable.rs  iter.rs  mutable.rs  owned.rs
crates/playa-ffmpeg/src/util/format/: pixel.rs  sample.rs
crates/playa-ffmpeg/src/util/frame/: audio.rs  mod.rs  side_data.rs  video.rs
crates/playa-ffmpeg/src/util/mathematics/: rescale.rs  rounding.rs
crates/playa-ffmpeg/src/util/option/: mod.rs  traits.rs
crates/pt-core/: Cargo.toml  README.md
crates/pt-denoise-oidn/: Cargo.toml
crates/pt-denoise-oidn/src/: lib.rs
crates/pt-material/: Cargo.toml
crates/pt-material/src/: io.rs  lib.rs  library.rs  material.rs  presets.rs
crates/pt-mats/: Cargo.toml  README.md
crates/pt-megakernel/: Cargo.toml  README.md
crates/pt-wavefront/: Cargo.toml  README.md
crates/render-3d/: Cargo.toml  README.md
crates/render-3d/shaders/: cube_object_id.wgsl  cube_pbr.wgsl  outline.wgsl  skybox.wgsl
crates/render-3d/src/: env_map.rs  geometry.rs  lib.rs  picking.rs  pipelines.rs  targets.rs
crates/render-3d/src/pt/: megakernel.rs  mod.rs  spectral.rs  wavefront.rs
crates/render-3d/src/pt/megakernel/: mod.rs  render.rs  render_no_readback.rs
crates/render-3d/src/renderer3d/: cpu_pick.rs  helpers.rs  instance_collect.rs  material_cache.rs  mod.rs  render.rs
crates/render-core/: Cargo.toml  README.md
crates/render-shared/: Cargo.toml
crates/squarebob-core/: Cargo.toml  README.md
crates/squarebob-widgets/: Cargo.toml
crates/squarebob-widgets/src/: lib.rs  variable.rs
crates/standard-surface/: Cargo.toml  LICENSE  README.md
crates/standard-surface/src/: lib.rs  params.rs
crates/standard-surface/src/shaders/: standard_surface.wgsl
crates/standard-surface/src/shaders/lib/: common.wgsl  diffuse.wgsl  fresnel.wgsl  microfacet.wgsl
crates/treemap/: Cargo.toml
crates/treemap/src/: lib.rs  wgpu.rs
crates/xtask/: Cargo.toml
data/: LICENSE  default.json  factory_render3d_options.json
data/oidn-weights/: rt_alb.tza  rt_hdr.tza  rt_hdr_alb.tza  rt_hdr_alb_nrm_small.tza  rt_hdr_alb_small.tza  rt_hdr_calb_cnrm.tza  rt_hdr_calb_cnrm_small.tza  rt_hdr_small.tza  rt_ldr_alb.tza  rt_ldr_alb_nrm_small.tza  rt_ldr_small.tza  (+6 more)
docs/: oidn-integration-plan.md  oidn-phase1-i5-survey.md  oidn-phase1-plan.md
src/: cache.rs  cli.rs  cli_test.rs  events.rs  exclusions.rs  main.rs  path_key.rs  renderer.rs  scanner.rs  scanner_ntfs.rs
(+116 files in other folders)
