[package]
name = "squarebob-rs"
version = "0.0.1"
edition = "2021"
rust-version = "1.95"

[workspace]
members = [
    "crates/squarebob-core",
    "crates/pt-core",
    "crates/bvh-gpu",
    "crates/pt-megakernel",
    "crates/pt-wavefront",
    "crates/pt-mats",
    "crates/render-core",
    "crates/render-shared",
    "crates/render-3d",
    "crates/media-encoder",
    "crates/xtask",
    "crates/treemap",
    "crates/pt-denoise-oidn",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dependencies]
# https://dev.to/yeauty/double-your-performance-with-one-line-of-code-the-memory-superpower-every-rust-developer-should-1g93
auto-allocator = { version = "*", features = ["secure"] }
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "persistence", "wgpu", "x11", "wayland"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
egui = "0.34"
egui-wgpu = "0.34"
egui_dock = { version = "0.19", features = ["serde"] }
jwalk = "0.8"
rayon = "1.12"
crossbeam-channel = "0.5"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
num_cpus = "1"
rfd = "0.17"
open = "5"
trash = "5"
bincode = "1"
directories = "6"
sha2 = "0.11"
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.32"
pollster = "0.4"
image = "0.25"
half = "2.7.1"
squarebob-core = { path = "crates/squarebob-core" }
render-core = { path = "crates/render-core" }
render-shared = { path = "crates/render-shared" }
render-3d = { path = "crates/render-3d" }
media-encoder = { path = "crates/media-encoder" }
treemap = { path = "crates/treemap", features = ["wgpu"] }
pt-core = { path = "crates/pt-core" }
bvh-gpu = { path = "crates/bvh-gpu" }
pt-megakernel = { path = "crates/pt-megakernel" }
pt-wavefront = { path = "crates/pt-wavefront" }
pt-mats = { path = "crates/pt-mats" }
pt-denoise-oidn = { path = "crates/pt-denoise-oidn" }
sysinfo = "0.38"
egui-phosphor = "0.12.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Foundation",
    "Win32_Security",
] }

[profile.release]
opt-level = 3

[package.metadata.packager]
product-name = "Squarebob"
identifier = "io.github.ssoj13.squarebobrs"
description = "Cross-platform disk usage visualizer with 2D and 3D treemap rendering."
homepage = "https://github.com/ssoj13/squarebob-rs"
out-dir = "dist"
binaries-dir = "target/release"
resources = [{ src = "data", target = "data" }]

[package.metadata.packager.deb]
depends = [
    "libasound2",
    "libgtk-3-0",
    "libx11-6",
    "libxcb-render0",
    "libxcb-shape0",
    "libxcb-xfixes0",
    "libxkbcommon0",
]
section = "utils"
priority = "optional"

[package.metadata.packager.macos]
minimum-system-version = "13.0"

[package.metadata.packager.nsis]
installer-mode = "currentUser"

