[package]
name = "playa-ae"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Generic Attribute Editor widget for egui. Extracted from Playa: a typed key-value attribute store (Attrs / AttrSchema) plus a table-based property-grid renderer that picks per-row widgets by type and optional UI hints (combobox, slider, etc.)."

# Hermetic — no Playa engine deps. Bring your own domain types and
# convert them to `Attrs` at the call site.

[dependencies]
eframe = { version = "0.34", default-features = false }
egui = "0.34"
egui_extras = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
