[package]
name = "squarebob-widgets"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Reusable egui widgets for squarebob — attribute editor, value+variance sliders, and friends. Hermetic, no project-specific deps beyond egui/serde/uuid."

# Hermetic by design — only standard egui/serde/uuid deps. The Attrs
# system and AttributeEditor widget were extracted from playa's
# `playa-engine::entities::attrs` + `playa-ui::widgets::ae` and
# stripped of timeline-specific bits. The variable-slider widgets are
# new, designed for "value + optional variance" UX (material editor,
# physical camera, etc.).
#
# `edition = "2024"` is required because the playa-derived attrs
# helpers use `if foo() && let Some(x) = bar { ... }` let-chain
# syntax, which is only stabilised in edition 2024.

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.34"
egui_extras = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
